sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:7: error: value =- is not a member of Int
    r=-1
     ^