sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var r = 0
  var debut = 1
  var len = getNombreValeurs()-1
  for (i<-0 to len-1){
    r=-1
  	  for (k<-i to len){
      	if (plusPetit(k,r)){
        	r=k
      }
    }
  	if (r>0) {
    echange(i,r)
    }
  }
}